Wersja ostatecznie ostateczna. Leci do druku.

--- a/thesis/01Wprowadzenie.tex
+++ b/thesis/01Wprowadzenie.tex
@@ -7,94 +7,94 @@
 \subsection{Problem}
 \label{Chapter111}
 
-W kontekście każdej organizacji, zrzeszającej większą grupę ludzi, takiej jak zakład pracy, czy jednostka szkolnictwa wyższego, jaką jest Politechnika Poznańska, niezbędne jest systematyczne badanie efektywności programów nauczania, sposobu kształcenia oraz celowości inwestycji. Przykładowo, brak wiedzy o potrzebach studentów i wykładowców dotyczących wyposażenia laboratoriów, sal wykładowych, programów komputerowych, może prowadzić do zbędnych zakupów, a tym samym do ponoszenia niepotrzebnych kosztów. Najprostszym i najbardziej popularnym narzędziem prowadzenia badań jest ankieta\footnote{\cite{Wiki:BA}\cite{IP:Awbi}}. Pozwala ona na nieinwazyjne, anonimowe i~masowe pozyskiwanie opinii respondentów na zadany temat, a~dzięki zastosowaniu odpowiednich metod statystycznych, także na ocenę zdania całej populacji. \\
+W~kontekście każdej organizacji, zrzeszającej większą grupę ludzi, takiej jak~zakład pracy, czy~jednostka szkolnictwa wyższego, jaką~jest Politechnika Poznańska, niezbędne jest systematyczne badanie efektywności programów nauczania, sposobu kształcenia oraz celowości inwestycji. Przykładowo, brak wiedzy o~potrzebach studentów i~wykładowców dotyczących wyposażenia laboratoriów, sal wykładowych, programów komputerowych, może prowadzić do zbędnych zakupów, a~tym~samym do~ponoszenia niepotrzebnych kosztów. Najprostszym i~najbardziej popularnym narzędziem prowadzenia badań jest ankieta\footnote{\cite{Wiki:BA}\cite{IP:Awbi}}. Pozwala ona na~nieinwazyjne, anonimowe i~masowe pozyskiwanie opinii respondentów na~zadany temat, a~dzięki zastosowaniu odpowiednich metod statystycznych, także na~ocenę zdania całej populacji. \\
 
-Biorąc pod uwagę ostatnie lata (2008-2012)\footnote{Mowa o~okresie, który jest znany autorom niniejszej pracy dyplomowej.}, w zgodzie ze statutem\footnote{Zapis dotyczący dokonywania oceny nauczyciela akademickiego z~uwzględnieniem oceny studentów\cite{AP:SPP11}.}, Politechnika Poznańska wykorzystywała szerokie spektrum narzędzi do pozyskiwania wiedzy o efektach podejmowanych działań. Jednak z uwagi na brak odpowiedniego systemu zapewniającego wymierność wyników (np.~uniemożliwienie wielokrotnego udziału pojedynczej osoby w ankiecie, zablokowanie możliwości wypełnienia ankiety przez studenta innego wydziału\slash kierunku, itp.), uzyskane informacje mogły przyczyniać się do błędnej interpretacji sytuacji. Dla zobrazowania dotychczasowego systemu badania, posłuży przykład ankietowania studentów Wydziału Informatyki\footnote{Do 2010 roku -- Wydziale Informatyki i~Zarządzania.}. Student był poddawany badaniom ankietowym w formie elektronicznej na poziomach uczelni i wydziału, formie papierowej przeprowadzanej przez Samorząd Studentów na potrzeby uczelni, oraz dodatkowym ankietom w ramach niektórych zajęć dydaktycznych. \\
+Biorąc pod uwagę ostatnie lata (2008-2012)\footnote{Mowa o~okresie, który jest znany autorom niniejszej pracy dyplomowej.}, w~zgodzie ze~statutem\footnote{Zapis dotyczący dokonywania oceny nauczyciela akademickiego z~uwzględnieniem oceny studentów\cite{AP:SPP11}.}, Politechnika Poznańska wykorzystywała szerokie spektrum narzędzi do~pozyskiwania wiedzy o~efektach podejmowanych działań. Jednak z~uwagi na~brak odpowiedniego systemu zapewniającego wymierność wyników (np.~uniemożliwienie wielokrotnego udziału pojedynczej osoby w~ankiecie, zablokowanie możliwości wypełnienia ankiety przez studenta innego wydziału\slash kierunku,~itp.), uzyskane informacje mogły przyczyniać~się do~błędnej interpretacji sytuacji. Dla~zobrazowania dotychczasowego systemu badania, posłuży przykład ankietowania studentów Wydziału Informatyki\footnote{Do 2010 roku -- Wydziale Informatyki i~Zarządzania.}. Student był~poddawany badaniom ankietowym w~formie elektronicznej na~poziomach uczelni i~wydziału, formie papierowej przeprowadzanej przez Samorząd Studentów na~potrzeby uczelni, oraz~dodatkowym ankietom w~ramach niektórych zajęć dydaktycznych. \\
 
-Wyniki ankiet realizowanych w ramach wyżej wymienionych systemów prowadzenia badań nie były ze sobą porównywane, a co za tym idzie, nie mogły dać pełnego obrazu panującej sytuacji. Samo wdrożenie badań nie umożliwiało wyciągnięcia konstruktywnych wniosków. Brak odpowiednich mechanizmów analizy ich wyników, generował zagrożenie wystąpienia spadku jakości usług świadczonych przez uczelnię, a~co za tym idzie, także jej prestiżu.
+Wyniki ankiet realizowanych w~ramach wyżej wymienionych systemów prowadzenia badań nie~były ze~sobą porównywane, co~sprawiało, że~nie~mogły dać pełnego obrazu panującej sytuacji. Samo wdrożenie badań nie~umożliwiało wyciągnięcia konstruktywnych wniosków. Brak odpowiednich mechanizmów analizy ich~wyników, generował zagrożenie wystąpienia spadku jakości usług świadczonych przez uczelnię, a~co za~tym idzie, także jej prestiżu.
 
 \subsection{Proponowane rozwiązanie}
 \label{Chapter112}
 
-Punktem wyjścia jest stworzenie jednego, globalnego, prostego w obsłudze systemu o nazwie \textit{iQuest}, służącego do prowadzenia badań ankietowych dla różnych grup docelowych, obejmujących zarówno aktualnych studentów oraz absolwentów Politechniki Poznańskiej. Będzie on współpracować z uczelnianym systemem raportowania, umożliwiającym wygodne pozyskiwanie informacji na zadany temat. \\
+Punktem wyjścia jest stworzenie jednego, globalnego, prostego w~obsłudze systemu o~nazwie \textit{iQuest}, służącego do~prowadzenia badań ankietowych dla~różnych grup docelowych, obejmujących zarówno aktualnych studentów oraz~absolwentów Politechniki Poznańskiej. Będzie on~współpracować z uczelnianym systemem raportowania, umożliwiającym wygodne pozyskiwanie informacji na~zadany temat. \\
 
-Dla zapewnienia bezproblemowego wdrożenia systemu oraz jego dostępności, zostanie on wykonany za pomocą technologii internetowych. Umożliwi to jego obsługę z użyciem dowolnej popularnej przeglądarki internetowej dostępnej na~rynku. \\
+Dla~zapewnienia bezproblemowego wdrożenia systemu oraz~jego dostępności, zostanie on~wykonany za~pomocą technologii internetowych. Umożliwi~to jego obsługę z~użyciem dowolnej popularnej przeglądarki internetowej dostępnej na~rynku. \\
 
-Ważnym elementem proponowanego rozwiązania jest objęcie badaniami również absolwentów uczelni. W zamian za wzięcie udziału w badaniach, uzyskają oni dostęp do~unikalnych materiałów dydaktyczno-naukowych. \\
+Ważnym elementem proponowanego rozwiązania jest objęcie badaniami również absolwentów uczelni. W~zamian za~wzięcie udziału w badaniach, uzyskają oni dostęp do~unikalnych materiałów dydaktyczno-naukowych. \\
 
-Przeprowadzane badania będą anonimowe. Jednakże, w celu zapewnienia prawidłowości i miarodajności wyników, niezbędne jest wprowadzenie mechanizmów uwierzytelniania użytkowników systemu. Ich autoryzacja będzie obejmować jedynie kwestię dostępu do badań i materiałów -- dla ankietera, wyniki będą pozbawione danych identyfikujących poszczególnych respondentów.
+Przeprowadzane badania będą anonimowe. Jednakże, w~celu zapewnienia prawidłowości i~miarodajności wyników, niezbędne jest wprowadzenie mechanizmów uwierzytelniania użytkowników systemu. Ich~autoryzacja będzie obejmować jedynie kwestię dostępu do badań i~materiałów -- dla ankietera, wyniki będą pozbawione danych identyfikujących poszczególnych respondentów.
 
 \section{Ograniczenia i zagrożenia dla projektu}
 \label{Chapter12}
 
-Analizie podano jedynie ograniczenia i zagrożenia związane ze stroną implementacyjną projektu, z uwzględnieniem następujących definicji:
+Analizie podano jedynie ograniczenia i~zagrożenia związane ze stroną implementacyjną projektu, z~uwzględnieniem następujących definicji:
 
 \begin{description}
-\item[Ograniczenie] -- granica, której przekroczenie jest niemożliwe lub zakazane. Obejmuje np. ograniczenia technologiczne oraz narzucone z góry przez osoby o kompetencjach decyzyjnych w kwestiach związanych z projektem.
-\item[Zagrożenie] -- sytuacja lub fakt mogący negatywnie wpłynąć na realizację projektu.
+\item[Ograniczenie] -- granica, której przekroczenie jest niemożliwe lub zakazane. Obejmuje np.~ograniczenia technologiczne oraz~narzucone z~góry przez osoby o~kompetencjach decyzyjnych w~kwestiach związanych z~projektem.
+\item[Zagrożenie] -- sytuacja lub~fakt mogący negatywnie wpłynąć na~realizację projektu.
 \end{description}
 
 \subsection{Ograniczenia}
 \label{Chapter121}
 
-System \textit{iQuest} realizowany jest dla Wydziału Informatyki. W związku z tym musi on spełniać szerokie spektrum wymagań ze strony takich organów, jak Dział Rozwoju Oprogramowania (DRO), Biuro Analiz i Rozwoju Usług (BAiRU), czy Dział Obsługi i Eksploatacji (DOiE). Jednym z warunków jest konieczność stosowania rozwiązań ,,otwartych'' (ang. \definicja{open}) oraz ,,wolnych'' (ang. \definicja{free}), co znacząco zawęża możliwe do zastosowania technologie i zasoby. \\
+System \textit{iQuest} realizowany jest dla~Wydziału Informatyki. W~związku z~tym musi~on spełniać szerokie spektrum wymagań ze~strony takich organów, jak Dział Rozwoju Oprogramowania (DRO), Biuro Analiz i~Rozwoju Usług (BAiRU), czy Dział Obsługi i~Eksploatacji (DOiE). Jednym z~warunków jest~konieczność stosowania rozwiązań ,,otwartych'' (ang. \definicja{open}) oraz ,,wolnych'' (ang. \definicja{free}), co~znacząco zawęża możliwe do~zastosowania technologie i~zasoby. \\
 
-Za poboczne ograniczenie, ale mające istotny wpływ na przebieg prac, należy uznać z góry narzucony harmonogram, oraz restrykcje co do wielkości zespołu programistów.
+Za poboczne ograniczenie, ale~mające istotny wpływ na~przebieg prac, należy uznać z~góry narzucony harmonogram, oraz restrykcje co~do wielkości zespołu programistów.
 
 \subsection{Zagrożenia}
 \label{Chapter122}
 
-Mimo braku wcześniejszego doświadczenia zespołu przy realizacji tego rodzaju projektów, zespół dynamicznie przystosowywał się do sytuacji, wykazując umiejętność szybkiego uczenia się. W dalszym ciągu zagrożeniem pozostaje fakt, że wykonawcami projektu są studenci uczelni technicznej, a nie wykwalifikowani specjaliści w dziedzinie technologii internetowych, posiadający wieloletnią praktykę w realizacji podobnych zadań. \\
+Mimo braku wcześniejszego doświadczenia zespołu przy realizacji tego rodzaju projektów, zespół dynamicznie przystosowywał~się do~sytuacji, wykazując umiejętność szybkiego uczenia~się. W~dalszym ciągu zagrożeniem pozostaje fakt, że~wykonawcami projektu są~studenci uczelni technicznej, a~nie wykwalifikowani specjaliści w~dziedzinie technologii internetowych, posiadający wieloletnią praktykę w~realizacji podobnych zadań. \\
 
-Poważną przeszkodą jest niekompletność dokumentacji niektórych systemów i technologii niezbędnych w projekcie\footnote{Rozwinięcie tej kwestii znajduje się w rozdziałach \ref{Chapter6}. oraz \ref{Chapter8}.} oraz niespodziewane zmiany w specyfikacji projektu i wymaganiach klienta, występujące w trakcie jego realizacji.
+Poważną przeszkodą jest niekompletność dokumentacji niektórych systemów i~technologii niezbędnych w~projekcie\footnote{Rozwinięcie tej~kwestii znajduje~się w~rozdziałach \ref{Chapter6}. oraz \ref{Chapter8}.} oraz~niespodziewane zmiany w~specyfikacji projektu i~wymaganiach klienta, występujące w~trakcie jego realizacji.
 
 \subsection{Wpływ ograniczeń i zagrożeń na projekt}
 \label{Chapter123}
 
-Narzucona decyzja o zastosowaniu konkretnych typów technologii (rozwiązania ,,wolne i otwarte''), dokumentowanych nie przez wyspecjalizowanych fachowców, lecz tzw. ,,społęczność'' (ang. \definicja{community}), wymusiła konieczność oparcia wielu działań na metodzie ,,prób i błędów'', co znacząco wpłynęło na czas realizacji zadań poszczególnych członków zespołu projektowego.
+Narzucona decyzja o~zastosowaniu konkretnych typów technologii (rozwiązania ,,wolne i~otwarte''), dokumentowanych nie~przez wyspecjalizowanych fachowców, lecz tzw.~,,społęczność'' (ang.~\definicja{community}), wymusiła konieczność oparcia wielu działań na~metodzie ,,prób i~błędów'', co~znacząco wpłynęło na~czas realizacji zadań poszczególnych członków zespołu projektowego.
 
-Wspomniana w poprzedniej sekcji (\ref{Chapter122}. -- Zagrożenia) kwestia zmieniających się wymagań i specyfikacji sprawiła jednak najwięcej problemów. Niejednokrotnie zdarzały się sytuacje, kiedy prace projektowe były już w zaawansowanym stadium, a nowe wytyczne powodowały konieczność rozpoczynania pracy od podstaw. Było to główną przyczyną powstawania opóźnień w realizacji projektu.
+Wspomniana w~poprzedniej sekcji (\ref{Chapter122}. -- Zagrożenia) kwestia zmieniających~się wymagań i~specyfikacji sprawiła jednak najwięcej problemów. Niejednokrotnie zdarzały~się sytuacje, kiedy prace projektowe były już w~zaawansowanym stadium, a~nowe wytyczne powodowały konieczność rozpoczynania pracy od~podstaw. Było~to główną przyczyną powstawania opóźnień w~realizacji projektu.
 
 \section{Cele projektu}
 \label{Chapter13}
 
-Celem projektu \textit{iQuest} jest zbudowanie jasnego, prostego, przystępnego systemu umożliwiającego prowadzenie badań wśród studentów i absolwentów uczelni. System ten powinien:
+Celem projektu \textit{iQuest} jest zbudowanie jasnego, prostego, przystępnego systemu umożliwiającego prowadzenie badań wśród studentów i~absolwentów uczelni. System ten powinien:
 \begin{itemize}
 \item{zapewnić spełnienie przez Uczelnię zapisów Ustawy ,,Prawo o Szkolnictwie Wyższym'' dotyczących monitorowania rozwoju absolwentów Uczelni\cite{AP:PoSW05}}
 \item{ujednolicić uczelniany system pozyskiwania informacji}
 \item{oferować dużą elastyczność:
 \begin{itemize}
 \item{przy definiowaniu różnorodnych ankiet}
-\item{przy tworzeniu i hierarchizacji grup respondentów}
-\item{przy zachęcaniu do uczestnictwa w niej przez potencjalnych Respondentów}
+\item{przy tworzeniu i~hierarchizacji grup respondentów}
+\item{przy zachęcaniu do~uczestnictwa w~niej przez~potencjalnych Respondentów}
 \end{itemize}}
-\item{integrować się z uczelnianym systemem raportowania}
-\item{odciążyć pracowników uczelni oraz Samorząd Studentów z obowiązków związanych z przeprowadzaniem konwencjonalnych (,,papierowych'') ankiet}
+\item{integrować~się z~uczelnianym systemem raportowania}
+\item{odciążyć pracowników uczelni oraz~Samorząd Studentów z~obowiązków związanych z~przeprowadzaniem konwencjonalnych (,,papierowych'') ankiet}
 \end{itemize}
 
 \section{Osoby realizujące projekt}
 \label{Chapter14}
 
-Projekt realizowany jest w ramach Software Development Studio (SDS), służącego realizacji projektów informatycznych dla Wydziału Informatyki Politechniki Poznańskiej. W rolę zespołu zarządzającego wcielają się studenci studiów magisterskich (specjalizacja \definicja{Software Engineering}). Zespół programistów tworzą studenci ostatniego semestru studiów inżynierskich, dla których udział w SDS jest ściśle związany z pracą dyplomową inżynierską. Ich wkład w projekt znajduje się w dodatku \ref{Chapter101}. \\
+Projekt realizowany jest w~ramach Software Development Studio (SDS), służącego realizacji projektów informatycznych dla~Wydziału Informatyki Politechniki Poznańskiej. W~rolę zespołu zarządzającego wcielają~się studenci studiów magisterskich (specjalizacja \definicja{Software Engineering}). Zespół programistów tworzą studenci ostatniego semestru studiów inżynierskich, dla~których udział w~SDS jest~ściśle związany z~pracą dyplomową inżynierską. Wkład poszczególnych osób w~projekt znajduje~się w~dodatku \ref{Chapter101}. \\
 
 Poniżej przedstawiono wykaz kompetencji poszczególnych zespołów:
 \begin{description}
-\item[Zespół zarządzający] -- dwóch studentów, pełniących w głównej mierze role \emph{kierownika projektu} oraz \emph{architekta}, ale także wykonujący obowiązki \emph{analityka}. Kompetencje:
+\item[Zespół zarządzający] -- dwóch studentów, pełniących w~głównej mierze role \emph{kierownika projektu} oraz~\emph{architekta}, ale~także wykonujący obowiązki \emph{analityka}. Kompetencje:
 \begin{itemize}
-\item Kontakt bezpośredni z klientem oraz jego przedstawicielami.
-\item Decydowanie o kierunku rozwoju projektu (w tym: wybór technologii, rozwiązań, itp.).
+\item Kontakt bezpośredni z~klientem oraz~jego przedstawicielami.
+\item Decydowanie o~kierunku rozwoju projektu (w~tym: wybór technologii, rozwiązań,~itp.).
 \item Utworzenie dokumentacji architektury projektu.
-\item Tworzenie i przydzielanie zadań do zespołu programistów.
+\item Tworzenie i~przydzielanie zadań do zespołu programistów.
 \end{itemize}
 \item[Zespół programistów] -- czterech studentów, pełniących role \emph{programistów}. Kompetencje:
 \begin{itemize}
-\item Przyjmowanie i realizacja zadań przydzielonych zespołowi.
-\item Zgłaszanie problemów z implementacją założeń architektonicznych.
-\item Opiniowanie decyzji w procesie ich podejmowania.
+\item Przyjmowanie i~realizacja zadań przydzielonych zespołowi.
+\item Zgłaszanie problemów z~implementacją założeń architektonicznych.
+\item Opiniowanie decyzji w~procesie ich~podejmowania.
 \end{itemize}
 \end{description}
 
 \section{Struktura pracy}
 \label{Chapter15}
 
-Praca została podzielona umownie na trzy wzajemnie uzupełniające się części. Część pierwsza, obejmująca rozdziały \ref{Chapter1}., \ref{Chapter8}. i \ref{Chapter9}. oraz sekcję \ref{Chapter62}. rozdziału \ref{Chapter6}., odnosi się do całości projektu z punktu widzenia realizujących go osób. Opisane są w niej założenia, napotkane problemy oraz wyciągnięte wnioski. Część druga -- rozdziały od \ref{Chapter2}. do \ref{Chapter5}. -- dotyczy charakterystyki projektu oraz jego architektury. Oparto ją na danych pozyskanych od zespołu zarządzającego projektem\cite{Redmine:ProjDocs}, dostępnych dla zespołu programistów w ramach platformy \textit{Redmine}. Część trzecia, zawierająca pozostałe rozdziały, tj. \ref{Chapter6}. i \ref{Chapter7}. (z wyłączeniem sekcji \ref{Chapter62}.), przedstawia projekt od strony implementacji. Opisuje szczegółowo budowę systemu iQuest.
+Praca została podzielona umownie na~trzy wzajemnie uzupełniające~się części. Część pierwsza, obejmująca rozdziały \ref{Chapter1}., \ref{Chapter8}. i~\ref{Chapter9}. oraz~sekcję \ref{Chapter62}. rozdziału \ref{Chapter6}., odnosi~się do~całości projektu z~punktu widzenia realizujących~go~osób. Opisane~są w~niej założenia, napotkane problemy oraz~wyciągnięte wnioski. Część druga -- rozdziały od~\ref{Chapter2}. do~\ref{Chapter5}. -- dotyczy charakterystyki projektu oraz~jego architektury. Oparto~ją na~danych pozyskanych od~zespołu zarządzającego projektem\footnote{\cite{Redmine:ProjDocs}}, dostępnych dla zespołu programistów w~ramach platformy \textit{Redmine}. Część trzecia, zawierająca pozostałe rozdziały, tj.~\ref{Chapter6}. i~\ref{Chapter7}. (z~wyłączeniem sekcji \ref{Chapter62}.), przedstawia projekt od~strony implementacji. Opisuje szczegółowo budowę systemu iQuest.
