--- a/thesis/03Funkcjonalne.tex
+++ b/thesis/03Funkcjonalne.tex
@@ -4,12 +4,12 @@
 \section{Wstęp}
 \label{Chapter31}
 
-Sprawna realizacja celów warunkujących powstanie systemu \textit{iQuest} uzależniona jest od spełnienia szeregu wymagań funkcjonalnych. Należą do nich m.in.~tworzenie i prowadzenie (zarówno ze strony Ankietera, jak i Respondenta) badań i ankiet, a także analiza powstałych na ich podstawie zestawień danych. Ze względu na charakter projektu \textit{iQuest}, niezwykle ważną funkcjonalnością okazał się najbardziej podstawowy ze wszystkich mechanizmów -- logowanie do systemu. Prawidłowa autoryzacja użytkowników systemu, podobnie jak ich uwierzytelnianie, a także współpraca z innymi systemami Uczelni są niezbędne dla prawidłowości i wymierności prowadzonych badań.
+Sprawna realizacja celów warunkujących powstanie systemu \textit{iQuest} uzależniona jest od~spełnienia szeregu wymagań funkcjonalnych. Należą do~nich m.in.~tworzenie i~prowadzenie (zarówno ze~strony Ankietera, jak~i~Respondenta) badań i~ankiet, a~także analiza powstałych na~ich podstawie zestawień danych. Ze~względu na~charakter projektu \textit{iQuest}, niezwykle ważną funkcjonalnością okazał~się najbardziej podstawowy ze~wszystkich mechanizmów -- logowanie do~systemu. Prawidłowa autoryzacja użytkowników systemu, podobnie jak~ich~uwierzytelnianie, a~także współpraca z~innymi systemami Uczelni są~niezbędne dla~prawidłowości i~wymierności prowadzonych badań.
 
 \section{Diagram przypadków użycia}
 \label{Chapter32}
 
-Na rysunku \ref{rys:UseCaseView} przedstawiono diagram przypadków użycia. W ramach systemu udostępniane są różne funkcje, możliwe do wykonania przez różnych aktorów. Dla przykładu, ankieter może tworzyć badania i analizować ich statystyki oraz powiązane raporty, podczas gdy respondent może brać udział w badaniach odpowiadając na pytania zadawane w ramach skierowanych do niego ankiet; Administrator zarządza przydzielaniem ról; Administrator Bazy Danych (zwany też Administratorem Danych) zajmuje się grupami Respondentów i przydzielaniem użytkownikom praw i zezwoleń.
+Na rysunku \ref{rys:UseCaseView} przedstawiono diagram przypadków użycia. W~ramach systemu udostępniane~są różne funkcje, możliwe do~wykonania przez~różnych aktorów. Dla~przykładu, ankieter może tworzyć badania i~analizować ich~statystyki oraz powiązane raporty, podczas~gdy respondent może brać udział w~badaniach odpowiadając na~pytania zadawane w~ramach skierowanych do~niego ankiet; Administrator zarządza przydzielaniem ról; Administrator Bazy Danych (utożsamiany też z Administratorem Danych) zajmuje się grupami Respondentów i~przydzielaniem użytkownikom praw i~zezwoleń.
 
 \begin{figure}[H]
 \centering\includegraphics[width=0.9\textwidth]{figures/UseCaseView}
