--- a/thesis/06-3-Interfejs-KU.tex
+++ b/thesis/06-3-Interfejs-KU.tex
@@ -1,13 +1,13 @@
 \section{Interfejs}
 \label{Chapter65}
 
-W trakcie projektowania graficznego interfejsu użytkownika, głównym problemem okazał się wybór odpowiedniego narzędzia. Celem, jaki postawiono, była maksymalna zgodność tworzonych elementów z różnymi wersjami \textit{Moodle} -- zarówno wcześniejszymi, jak i późniejszymi. Wymagano stosowania gotowych interfejsów programowania aplikacji (\textit{API}) dostarczonych przez \textit{Moodle}, m.in.~\textit{Form API}. Wszystkie interfejsy zostały napisane przy użyciu języka \textit{PHP} (są więc wykonywane po stronie serwera). Konieczne okazało się też wykonanie niektórych skryptów po stronie klienta. Z tego względu w projekcie wykorzystano również język skryptowy \textit{JavaScript}.
+W trakcie projektowania graficznego interfejsu użytkownika, głównym problemem okazał~się wybór odpowiedniego narzędzia. Celem, jaki postawiono, była~maksymalna zgodność tworzonych elementów z~różnymi wersjami \textit{Moodle} -- zarówno wcześniejszymi, jak i~późniejszymi. Wymagano stosowania gotowych interfejsów programowania aplikacji (\textit{API}) dostarczonych przez~\textit{Moodle}, m.in.~\textit{Form API}. Wszystkie interfejsy zostały napisane przy~użyciu języka~\textit{PHP} (są~więc wykonywane po~stronie serwera). Konieczne okazało~się też~wykonanie niektórych skryptów po~stronie klienta. Z~tego względu w~projekcie wykorzystano również język skryptowy \textit{JavaScript}.
 
 \subsection{Bezpieczeństwo}
 \label{Chapter651}
 
-Potencjalnie, z systemu może korzystać wielu użytkowników, zarówno studentów jak i pracowników. Każda z tych osób może być uprawniona do wykonywania innych czynności w systemie, niezależnie od siebie. Wiąże się to z jednej strony z uwierzytelnianiem użytkowników, z drugiej -- z ich autoryzacją. Odbywa się to za pomocą wbudowanego w \textit{Moodle} mechanizmu ról. \\
+Potencjalnie, z~systemu może korzystać wielu użytkowników, zarówno studentów jak~i~pracowników. Każda z~tych osób może być uprawniona do~wykonywania innych czynności w~systemie, niezależnie od~siebie. Wiąże się to z~jednej strony z~uwierzytelnianiem użytkowników, z~drugiej -- z~ich autoryzacją. Odbywa się to za~pomocą wbudowanego w~\textit{Moodle} mechanizmu~ról. \\
 
-Zapewnienie bezpieczeństwa w systemie wymagane jest, aby użytkownik przez pomyłkę nie wykonał czynności, do których nie został uprawniony. Sprowadza się to do ograniczenia mu dostępnych opcji do tych, których może używać. W efekcie, użytkownik może zobaczyć i użyć jedynie tych odnośników, które prowadzą do zasobów, do których posiada uprawnienia. \\
+Zapewnienie bezpieczeństwa w systemie wymagane jest, aby~użytkownik przez pomyłkę nie~wykonał czynności, do~których nie~został uprawniony. Sprowadza~się to do~ograniczenia mu~dostępnych opcji do~tych, których~może używać. W~efekcie, użytkownik może zobaczyć i~użyć jedynie tych~odnośników, które~prowadzą do~zasobów, do~których posiada uprawnienia. \\
 
-Zabezpieczenie nie polega jedynie na ograniczeniu dostępności opcji. Należy założyć, że użytkownik może przypadkowo, lub z intencją, podjąć próbę pozyskania zasobów bez autoryzacji. Z tego względu zapewnienie bezpieczeństwa wiąże się także z odmową dostępu do zabronionych zasobów. W tym celu sprawdzano dane, które przychodzą do serwera, m.in. tworząc zmienne wiązane w zapytaniach \textit{SQL}, co pozwala na obronę przed atakami typu \textit{SQL-injection}. Ostatecznie, bezpośrednio przed wyświetleniem treści użytkownikowi, sprawdzane jest, czy jest on uprawniony do ich odczytu. Dzięki temu, niepowołany użytkownik nie uzyska dostępu do niedozwolonych treści, nawet przez wykorzystanie adresu prowadzącego bezpośrednio do żądanego zasobu.
+Zabezpieczenie nie~polega jedynie na~ograniczeniu dostępności opcji. Należy założyć, że~użytkownik może przypadkowo, lub~z~intencją, podjąć próbę pozyskania zasobów bez~autoryzacji. Z~tego~względu zapewnienie bezpieczeństwa wiąże~się także z~odmową dostępu do~zabronionych zasobów. W~tym~celu sprawdza~się dane, które przychodzą do~serwera, m.in.~tworząc zmienne wiązane w~zapytaniach~\textit{SQL}, co~pozwala na~obronę przed atakami typu~\textit{SQL-injection}. Ostatecznie, bezpośrednio przed~wyświetleniem treści użytkownikowi, sprawdzane jest, czy~jest~on uprawniony do~ich~odczytu. Dzięki temu, niepowołany użytkownik nie~uzyska dostępu do~niedozwolonych treści, nawet~przez wykorzystanie adresu prowadzącego bezpośrednio do~żądanego zasobu.
