--- a/thesis/06-4-Logika-LW.tex
+++ b/thesis/06-4-Logika-LW.tex
@@ -5,7 +5,6 @@ System \textit{iQuest} do prawidłowej pracy wymagał zaprogramowania odpowiedni
 
 Jedno z wymagań pozafunkcjonalnych dotyczyło zastosowania bazy danych \textit{PostgreSQL}. Platforma \textit{Moodle} korzysta z mechanizmu \textit{XMLDB}, co pozwala na uniknięcie wielu problemów pojawiających się przy migracjach pomiędzy różnymi systemami baz danych. Niestety ceną zastosowania tego mechanizmu jest konieczność pracy z \textit{API} dostarczanym wraz z platformą \textit{Moodle} -- \textit{Data manipulation API}. Na diagramach \ref{rys:back-end1}. oraz \ref{rys:back-end2}. przedstawiających wyżej opisaną logikę systemu \textit{iQuest}, znajdują się także klasy przechowujące stałe: \textit{tables} oraz \textit{settings}. \\
 
-\newpage
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=0.9\textwidth]{figures/lw/backend1.pdf} 
@@ -15,7 +14,7 @@ Jedno z wymagań pozafunkcjonalnych dotyczyło zastosowania bazy danych \textit{
 \newpage
 \begin{figure}[H]
 \begin{center}
-\includepdf{figures/lw/backend2.pdf} 
+\includegraphics[width=\textwidth]{figures/lw/backend2.pdf} 
 \end{center}
 \caption{Struktura back-endu (2) (wyk. Łukasz Wieczorek)}\label{rys:back-end2}
 \end{figure}
