--- a/thesis/09Zakonczenie.tex
+++ b/thesis/09Zakonczenie.tex
@@ -4,13 +4,13 @@
 \section{Podsumowanie}
 \label{Chapter91}
 
-Realizacja projektu obejmującego utworzenie systemu \textit{iQuest} została zakończona sukcesem. Platforma \textit{Moodle}, w połączeniu z autorskimi wtyczkami składającymi się na system \textit{iQuest} zapewnia pełnię zleconej funkcjonalności, spełniając zarazem wymagania przedstawione w niniejszym dokumencie. \\
+Realizacja projektu obejmującego utworzenie systemu \textit{iQuest} została zakończona sukcesem. Platforma \textit{Moodle}, w~połączeniu z~autorskimi wtyczkami składającymi~się na~system \textit{iQuest} zapewnia pełnię zleconej funkcjonalności, spełniając zarazem wymagania przedstawione w~niniejszym dokumencie. \\
 
-Dzięki wdrożeniu systemu \textit{iQuest}, Politechnika Poznańska uzyska dostęp do niezbędnego narzędzia prowadzenia badań wśród swoich absolwentów w rozumieniu ustawy ,,Prawo o Szkolnictwie Wyższym''. Jest to znaczący krok w stronę lepszego poznania potrzeb rynku, zarówno pracodawców, jak i samych studentów, pozwalający usprawnić mechanizmy zapewniania jakości kształcenia funkcjonujące na uczelni. \\
+Dzięki wdrożeniu systemu \textit{iQuest}, Politechnika Poznańska uzyska dostęp do~niezbędnego narzędzia prowadzenia badań wśród swoich absolwentów w~rozumieniu ustawy ,,Prawo o Szkolnictwie Wyższym''. Jest~to znaczący krok w~stronę lepszego poznania potrzeb rynku, zarówno pracodawców, jak~i~samych studentów, pozwalający usprawnić mechanizmy zapewniania jakości kształcenia funkcjonujące na~uczelni. \\
 
-Udział w tak dużym i znaczącym dla Politechniki Poznańskiej projekcie przyczynił się do znaczącego rozwoju jego uczestników. Pozyskali oni wiele cennych doświadczeń i wyciągnęli znaczną liczbę najróżniejszych wniosków. Autorzy niniejszej pracy dyplomowej wyrażają więc nadzieję, że utworzony przez nich system zostanie pozytywnie przyjęty przez studentów, absolwentów oraz prowadzących.
+Udział w tak dużym i znaczącym dla Politechniki Poznańskiej projekcie przyczynił~się do~znaczącego rozwoju jego uczestników. Pozyskali oni~wiele cennych doświadczeń i~wyciągnęli znaczną liczbę najróżniejszych wniosków. Autorzy niniejszej pracy dyplomowej wyrażają więc nadzieję, że~utworzony przez nich system zostanie pozytywnie przyjęty przez studentów, absolwentów oraz~prowadzących.
 
 \section{Propozycja dalszych prac}
 \label{Chapter92}
 
-Podczas spotkania z reprezentantami Działu Rozwoju Oprogramowania poruszony został temat etykietowania (ang. tag) badań. Proponowany mechanizm z pewnością usprawniłby proces wyszukiwania badań. W obecnej wersji systemu zachętą dla studentów do wypełniania ankiet są materiały publikowane przez wykładowców uczelni, do których dostęp przyznawany jest użytkownikom, którzy w określonym czasie udzielili odpowiedzi w dowolnym badaniu. W przyszłości mechanizm ten można zastąpić możliwością subskrypcji (wykupu) dostępu do publikowanych materiałów z wykorzystaniem wirtualnej waluty (np.~punktów za udział w badaniach).
+Podczas spotkania z reprezentantami Działu Rozwoju Oprogramowania poruszony został temat etykietowania (ang.~\definicja{tag}) badań. Proponowany mechanizm z~pewnością usprawniłby proces wyszukiwania badań. W~obecnej wersji systemu zachętą dla~studentów do~wypełniania ankiet są~materiały publikowane przez wykładowców uczelni, do~których dostęp przyznawany jest użytkownikom, którzy~w~określonym czasie udzielili odpowiedzi w~dowolnym badaniu. W~przyszłości mechanizm ten~można zastąpić możliwością subskrypcji (wykupu) dostępu do~publikowanych materiałów z~wykorzystaniem wirtualnej waluty (np.~punktów za~udział w~badaniach).
