--- a/thesis/10Dodatki.tex
+++ b/thesis/10Dodatki.tex
@@ -131,9 +131,9 @@ Odpowiedzialność za część implementacyjną systemu została przedstawiona p
 \end{description}
 
 %\noindent
-Autorzy niniejszej pracy dyplomowej inżynierskiej składają serdeczne podziękowania Promotorowi, dr. inż. Bartoszowi Walterowi, który wytrwale wspierał ich przy realizacji zadań związanych z projektem, oraz dr. inż. Grzegorzowi Pawlakowi, prowadzącemu przedmiot ,,Pracownia inżynierska'', za aktywne motywowanie ich do wytężonej pracy. \\
+Autorzy niniejszej pracy dyplomowej inżynierskiej składają serdeczne podziękowania Promotorowi, dr.~inż.~Bartoszowi Walterowi, który wytrwale wspierał ich przy~realizacji zadań związanych z~projektem, oraz~dr.~inż.~Grzegorzowi Pawlakowi, prowadzącemu przedmiot ,,Pracownia inżynierska'', za~aktywne motywowanie ich do~wytężonej pracy. \\
 
-Podziękowania należą się także zespołowi zarządzającemu oraz opiekunom \textit{SDS}, w tym w szczególności mgr inż. Sylwii Kopczyńskiej, za przygotowanie wymaganych materiałów źródłowych oraz niewyczerpaną wiarę w możliwości zespołu programistów.
+Podziękowania należą~się także zespołowi zarządzającemu za przygotowanie wymaganych materiałów źródłowych, oraz~opiekunom~\textit{SDS}, w tym w~szczególności mgr~inż.~Sylwii Kopczyńskiej, za niewyczerpaną wiarę w~możliwości zespołu programistów.
 
 \section{Wykaz użytych narzędzi i technologii}
 \label{ChapterA4}
