--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -1,26 +1,27 @@
 @misc{AP:PoSW05,
-title = {{Ustawa z dnia 27 lipca 2005 r. -- Prawo o szkolnictwie wyższym}},
-note = {{Dz. U. Nr 164, poz. 1365, z późn. zm., Art. 13a.}},
-year = {{2005}}
+title = {Ustawa z dnia 27 lipca 2005 r. -- Prawo o szkolnictwie wyższym},
+note = {Dz. U. Nr 164, poz. 1365, z późn. zm., Art. 13a.},
+year = {2005}
 }
 
 @misc{AP:SPP11,
-title = {{Statut Politechniki Poznańskiej}},
-note = {{Uchwała Nr 154, \textsection{83}, ust. 5}},
-year = {{2011}}
+title = {Statut Politechniki Poznańskiej},
+note = {Uchwała Nr 154, \textsection{83}, ust. 5},
+year = {2011}
 }
 
 @unpublished{Redmine:ProjDocs,
 author = {M. Domański, B. Matuszyk},
-title = {Dokumentacja systemu iQuest},
+title = {Dokumentacja systemu ,,iQuest''},
 note = {Materiały zamieszczone w ramach platformy Redmine w domenie \url{http://conaiten.put.poznan.pl}},
 year = {2012-2013}
 }
 
 @misc{PP:CUiWD10,
-title = {{Centralne uwierzytelnianie i wymiana danych.}},
-note = {{Wersja 1.2 (2010.07.06)}},
-year = {{2010}}
+author = {Dział Rozwoju Oprogramowania Politechniki Poznańskiej},
+title = {Centralne uwierzytelnianie i wymiana danych.},
+note = {Wersja 1.2 (2010.07.06)},
+year = {2010}
 }
 
 @Book{BD:WdCiH11,
@@ -61,10 +62,10 @@ year = {2012-2013},
 howpublished = {[on-line] \url{http://seleniumhq.org/docs}}
 }
 
-@misc{Man:Ubuntu,
-title =			{{Official Ubuntu Documentation}},
-year =			{{2012-2013}},
-howpublished = {{[on-line] \url{https://help.ubuntu.com}}
+@Manual{Man:Ubuntu,
+title = {Official Ubuntu Documentation},
+year = {2012-2013},
+howpublished = {[on-line] \url{https://help.ubuntu.com}
 }
 
 @misc{W3C:SOAP07,
