--- a/thesis/thesis-bachelor-polski.tex
+++ b/thesis/thesis-bachelor-polski.tex
@@ -29,6 +29,7 @@
 \hyphenation{o-sob-no}
 \hyphenation{po-za-fun-kcjo-nal-ne}
 \hyphenation{pra-co-wni-ków}
+\hyphenation{pra-wi-dło-wa}
 \hyphenation{re-a-li-za-cji}
 \hyphenation{redmine}
 \hyphenation{roz-sze-rza-ją-cych}
